cdk.out/cdk-ec2-benchmark-ap-southeast-2.template.json
{
  "Resources": {
    "vpcA2121C38": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.10.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/Resource"
      }
    },
    "vpcprivateSubnet1SubnetAE1393DC": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.0.0/24",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": "ap-southeast-2a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/privateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/privateSubnet1/Subnet"
      }
    },
    "vpcprivateSubnet1RouteTableC1CE9D76": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/privateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/privateSubnet1/RouteTable"
      }
    },
    "vpcprivateSubnet1RouteTableAssociationD9FC1FAE": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcprivateSubnet1RouteTableC1CE9D76"
        },
        "SubnetId": {
          "Ref": "vpcprivateSubnet1SubnetAE1393DC"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/privateSubnet1/RouteTableAssociation"
      }
    },
    "vpcprivateSubnet1DefaultRoute22F06BF9": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcprivateSubnet1RouteTableC1CE9D76"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "vpcpublicSubnet1NATGateway974E731F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/privateSubnet1/DefaultRoute"
      }
    },
    "vpcprivateSubnet2Subnet1C8B0CEE": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.1.0/24",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": "ap-southeast-2b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/privateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/privateSubnet2/Subnet"
      }
    },
    "vpcprivateSubnet2RouteTable882A110C": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/privateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/privateSubnet2/RouteTable"
      }
    },
    "vpcprivateSubnet2RouteTableAssociationF1D5617F": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcprivateSubnet2RouteTable882A110C"
        },
        "SubnetId": {
          "Ref": "vpcprivateSubnet2Subnet1C8B0CEE"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/privateSubnet2/RouteTableAssociation"
      }
    },
    "vpcprivateSubnet2DefaultRouteF7D5A1BD": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcprivateSubnet2RouteTable882A110C"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "vpcpublicSubnet2NATGateway97E8DB6F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/privateSubnet2/DefaultRoute"
      }
    },
    "vpcprivateSubnet3SubnetE7E339A1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.2.0/24",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": "ap-southeast-2c",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/privateSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/privateSubnet3/Subnet"
      }
    },
    "vpcprivateSubnet3RouteTable42E0F53B": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/privateSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/privateSubnet3/RouteTable"
      }
    },
    "vpcprivateSubnet3RouteTableAssociation2F6C13EA": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcprivateSubnet3RouteTable42E0F53B"
        },
        "SubnetId": {
          "Ref": "vpcprivateSubnet3SubnetE7E339A1"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/privateSubnet3/RouteTableAssociation"
      }
    },
    "vpcprivateSubnet3DefaultRoute6AF6D7C9": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcprivateSubnet3RouteTable42E0F53B"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "vpcpublicSubnet3NATGateway4134ED1A"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/privateSubnet3/DefaultRoute"
      }
    },
    "vpcpublicSubnet1SubnetA635257E": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.3.0/24",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": "ap-southeast-2a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet1/Subnet"
      }
    },
    "vpcpublicSubnet1RouteTableA38152FE": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet1/RouteTable"
      }
    },
    "vpcpublicSubnet1RouteTableAssociationB46101B8": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcpublicSubnet1RouteTableA38152FE"
        },
        "SubnetId": {
          "Ref": "vpcpublicSubnet1SubnetA635257E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet1/RouteTableAssociation"
      }
    },
    "vpcpublicSubnet1DefaultRouteF0973989": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcpublicSubnet1RouteTableA38152FE"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcIGWE57CBDCA"
        }
      },
      "DependsOn": [
        "vpcVPCGW7984C166"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet1/DefaultRoute"
      }
    },
    "vpcpublicSubnet1EIP909BE2D3": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet1/EIP"
      }
    },
    "vpcpublicSubnet1NATGateway974E731F": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "vpcpublicSubnet1EIP909BE2D3",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "vpcpublicSubnet1SubnetA635257E"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet1/NATGateway"
      }
    },
    "vpcpublicSubnet2Subnet027D165B": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.4.0/24",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": "ap-southeast-2b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet2/Subnet"
      }
    },
    "vpcpublicSubnet2RouteTableA6135437": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet2/RouteTable"
      }
    },
    "vpcpublicSubnet2RouteTableAssociation73F6478A": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcpublicSubnet2RouteTableA6135437"
        },
        "SubnetId": {
          "Ref": "vpcpublicSubnet2Subnet027D165B"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet2/RouteTableAssociation"
      }
    },
    "vpcpublicSubnet2DefaultRoute13685A07": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcpublicSubnet2RouteTableA6135437"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcIGWE57CBDCA"
        }
      },
      "DependsOn": [
        "vpcVPCGW7984C166"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet2/DefaultRoute"
      }
    },
    "vpcpublicSubnet2EIPB56D1A92": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet2/EIP"
      }
    },
    "vpcpublicSubnet2NATGateway97E8DB6F": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "vpcpublicSubnet2EIPB56D1A92",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "vpcpublicSubnet2Subnet027D165B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet2/NATGateway"
      }
    },
    "vpcpublicSubnet3Subnet3B90E684": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.5.0/24",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": "ap-southeast-2c",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet3/Subnet"
      }
    },
    "vpcpublicSubnet3RouteTable901FAA39": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet3/RouteTable"
      }
    },
    "vpcpublicSubnet3RouteTableAssociationF6210B68": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcpublicSubnet3RouteTable901FAA39"
        },
        "SubnetId": {
          "Ref": "vpcpublicSubnet3Subnet3B90E684"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet3/RouteTableAssociation"
      }
    },
    "vpcpublicSubnet3DefaultRoute02D8E508": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcpublicSubnet3RouteTable901FAA39"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcIGWE57CBDCA"
        }
      },
      "DependsOn": [
        "vpcVPCGW7984C166"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet3/DefaultRoute"
      }
    },
    "vpcpublicSubnet3EIP8F60B2E4": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet3/EIP"
      }
    },
    "vpcpublicSubnet3NATGateway4134ED1A": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "vpcpublicSubnet3EIP8F60B2E4",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "vpcpublicSubnet3Subnet3B90E684"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/publicSubnet3/NATGateway"
      }
    },
    "vpcisolatedSubnet1Subnet06BBE51F": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.6.0/24",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": "ap-southeast-2a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/isolatedSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/isolatedSubnet1/Subnet"
      }
    },
    "vpcisolatedSubnet1RouteTable7903AE22": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/isolatedSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/isolatedSubnet1/RouteTable"
      }
    },
    "vpcisolatedSubnet1RouteTableAssociation66413364": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcisolatedSubnet1RouteTable7903AE22"
        },
        "SubnetId": {
          "Ref": "vpcisolatedSubnet1Subnet06BBE51F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/isolatedSubnet1/RouteTableAssociation"
      }
    },
    "vpcisolatedSubnet2Subnet51F71E92": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.7.0/24",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": "ap-southeast-2b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/isolatedSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/isolatedSubnet2/Subnet"
      }
    },
    "vpcisolatedSubnet2RouteTableD2247699": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/isolatedSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/isolatedSubnet2/RouteTable"
      }
    },
    "vpcisolatedSubnet2RouteTableAssociation14DFC38E": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcisolatedSubnet2RouteTableD2247699"
        },
        "SubnetId": {
          "Ref": "vpcisolatedSubnet2Subnet51F71E92"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/isolatedSubnet2/RouteTableAssociation"
      }
    },
    "vpcisolatedSubnet3Subnet9AD891C2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.8.0/24",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": "ap-southeast-2c",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/isolatedSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/isolatedSubnet3/Subnet"
      }
    },
    "vpcisolatedSubnet3RouteTableA5F3A5A5": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc/isolatedSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/isolatedSubnet3/RouteTable"
      }
    },
    "vpcisolatedSubnet3RouteTableAssociation1B19EA22": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcisolatedSubnet3RouteTableA5F3A5A5"
        },
        "SubnetId": {
          "Ref": "vpcisolatedSubnet3Subnet9AD891C2"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/isolatedSubnet3/RouteTableAssociation"
      }
    },
    "vpcIGWE57CBDCA": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/IGW"
      }
    },
    "vpcVPCGW7984C166": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "InternetGatewayId": {
          "Ref": "vpcIGWE57CBDCA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/vpc/VPCGW"
      }
    },
    "pubsgE391E72B": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "cdk-ec2-benchmark-ap-southeast-2/pub_sg",
        "GroupName": "pub_sg",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "from 0.0.0.0/0:22",
            "FromPort": 22,
            "IpProtocol": "tcp",
            "ToPort": 22
          },
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "from 0.0.0.0/0:80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          },
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "from 0.0.0.0/0:3389",
            "FromPort": 3389,
            "IpProtocol": "tcp",
            "ToPort": 3389
          },
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "from 0.0.0.0/0:5001",
            "FromPort": 5001,
            "IpProtocol": "tcp",
            "ToPort": 5001
          },
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "from 0.0.0.0/0:5201",
            "FromPort": 5201,
            "IpProtocol": "tcp",
            "ToPort": 5201
          },
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "from 0.0.0.0/0:49200",
            "FromPort": 49200,
            "IpProtocol": "tcp",
            "ToPort": 49200
          }
        ],
        "VpcId": {
          "Ref": "vpcA2121C38"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/pub_sg/Resource"
      }
    },
    "pubinstanceaInstanceRoleDEB44D92": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/pub-instance_a"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/pub-instance_a/InstanceRole/Resource"
      }
    },
    "pubinstanceaInstanceProfile31D99C68": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Roles": [
          {
            "Ref": "pubinstanceaInstanceRoleDEB44D92"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/pub-instance_a/InstanceProfile"
      }
    },
    "pubinstancea3E39ED94": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "AvailabilityZone": "ap-southeast-2a",
        "IamInstanceProfile": {
          "Ref": "pubinstanceaInstanceProfile31D99C68"
        },
        "ImageId": "ami-04b1878ebf78f7370",
        "InstanceType": "t3.micro",
        "KeyName": "prod-ap-southeast-2-keypair",
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "pubsgE391E72B",
              "GroupId"
            ]
          }
        ],
        "SubnetId": {
          "Ref": "vpcpublicSubnet1SubnetA635257E"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/pub-instance_a"
          }
        ],
        "UserData": {
          "Fn::Base64": "#!/bin/bash\nsudo apt update && sudo apt -y install net-tools curl whois bind9-host jq ipcalc grepcidr ncat iperf3 hping3 mtr traceroute aha apache2\nsudo curl https://raw.githubusercontent.com/nitefood/asn/master/asn > /usr/bin/asn\nsudo chmod 0755 /usr/bin/asn\n\n            sudo echo \"[Unit]\n            Description=ASN lookup and traceroute server\n            After=network.target\n            StartLimitIntervalSec=0\n\n            [Service]\n            Type=simple [...]
        }
      },
      "DependsOn": [
        "pubinstanceaInstanceRoleDEB44D92"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/pub-instance_a/Resource"
      }
    },
    "pubinstancebInstanceRoleABEF0A3A": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/pub-instance_b"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/pub-instance_b/InstanceRole/Resource"
      }
    },
    "pubinstancebInstanceProfileCEDE5B5D": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Roles": [
          {
            "Ref": "pubinstancebInstanceRoleABEF0A3A"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/pub-instance_b/InstanceProfile"
      }
    },
    "pubinstanceb5B76C053": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "AvailabilityZone": "ap-southeast-2b",
        "IamInstanceProfile": {
          "Ref": "pubinstancebInstanceProfileCEDE5B5D"
        },
        "ImageId": "ami-04b1878ebf78f7370",
        "InstanceType": "t3.micro",
        "KeyName": "prod-ap-southeast-2-keypair",
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "pubsgE391E72B",
              "GroupId"
            ]
          }
        ],
        "SubnetId": {
          "Ref": "vpcpublicSubnet2Subnet027D165B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/pub-instance_b"
          }
        ],
        "UserData": {
          "Fn::Base64": "#!/bin/bash\nsudo apt update && sudo apt -y install net-tools curl whois bind9-host jq ipcalc grepcidr ncat iperf3 hping3 mtr traceroute aha apache2\nsudo curl https://raw.githubusercontent.com/nitefood/asn/master/asn > /usr/bin/asn\nsudo chmod 0755 /usr/bin/asn\n\n            sudo echo \"[Unit]\n            Description=ASN lookup and traceroute server\n            After=network.target\n            StartLimitIntervalSec=0\n\n            [Service]\n            Type=simple [...]
        }
      },
      "DependsOn": [
        "pubinstancebInstanceRoleABEF0A3A"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/pub-instance_b/Resource"
      }
    },
    "pubinstancecInstanceRoleA39A3AE9": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/pub-instance_c"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/pub-instance_c/InstanceRole/Resource"
      }
    },
    "pubinstancecInstanceProfileD6961FD9": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Roles": [
          {
            "Ref": "pubinstancecInstanceRoleA39A3AE9"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/pub-instance_c/InstanceProfile"
      }
    },
    "pubinstancec518A5C89": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "AvailabilityZone": "ap-southeast-2c",
        "IamInstanceProfile": {
          "Ref": "pubinstancecInstanceProfileD6961FD9"
        },
        "ImageId": "ami-04b1878ebf78f7370",
        "InstanceType": "t3.micro",
        "KeyName": "prod-ap-southeast-2-keypair",
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "pubsgE391E72B",
              "GroupId"
            ]
          }
        ],
        "SubnetId": {
          "Ref": "vpcpublicSubnet3Subnet3B90E684"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-ec2-benchmark-ap-southeast-2/pub-instance_c"
          }
        ],
        "UserData": {
          "Fn::Base64": "#!/bin/bash\nsudo apt update && sudo apt -y install net-tools curl whois bind9-host jq ipcalc grepcidr ncat iperf3 hping3 mtr traceroute aha apache2\nsudo curl https://raw.githubusercontent.com/nitefood/asn/master/asn > /usr/bin/asn\nsudo chmod 0755 /usr/bin/asn\n\n            sudo echo \"[Unit]\n            Description=ASN lookup and traceroute server\n            After=network.target\n            StartLimitIntervalSec=0\n\n            [Service]\n            Type=simple [...]
        }
      },
      "DependsOn": [
        "pubinstancecInstanceRoleA39A3AE9"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-ec2-benchmark-ap-southeast-2/pub-instance_c/Resource"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Modules": "aws-cdk=1.134.0,@aws-cdk/aws-cloudwatch=1.53.0,@aws-cdk/aws-ec2=1.53.0,@aws-cdk/aws-events=1.53.0,@aws-cdk/aws-iam=1.53.0,@aws-cdk/aws-kms=1.53.0,@aws-cdk/aws-logs=1.53.0,@aws-cdk/aws-s3=1.53.0,@aws-cdk/aws-ssm=1.53.0,@aws-cdk/cloud-assembly-schema=1.53.0,@aws-cdk/core=1.53.0,@aws-cdk/cx-api=1.53.0,@aws-cdk/region-info=1.53.0,jsii-runtime=Python/3.8.10"
      }
    }
  },
  "Outputs": {
    "publicipinstancea": {
      "Value": {
        "Fn::GetAtt": [
          "pubinstancea3E39ED94",
          "PublicIp"
        ]
      }
    },
    "publicipinstanceb": {
      "Value": {
        "Fn::GetAtt": [
          "pubinstanceb5B76C053",
          "PublicIp"
        ]
      }
    },
    "publicipinstancec": {
      "Value": {
        "Fn::GetAtt": [
          "pubinstancec518A5C89",
          "PublicIp"
        ]
      }
    },
    "publicsubneta": {
      "Value": {
        "Ref": "vpcpublicSubnet1SubnetA635257E"
      }
    },
    "publicsubnetsb": {
      "Value": {
        "Ref": "vpcpublicSubnet2Subnet027D165B"
      }
    },
    "publicsubnetsc": {
      "Value": {
        "Ref": "vpcpublicSubnet3Subnet3B90E684"
      }
    }
  }
}
